syntax = "proto3";

                 package playercreateinfoItem;
service PlayercreateinfoItemService {
 rpc createPlayercreateinfoItem (PlayercreateinfoItemCreateInput) returns (PlayercreateinfoItem) {}
rpc playercreateinfoItems (findManyParams) returns (stream PlayercreateinfoItem) {}
rpc playercreateinfoItem (PlayercreateinfoItemWhereUniqueInput) returns (PlayercreateinfoItem) {}
rpc updatePlayercreateinfoItem (PlayercreateinfoItemUpdateInput) returns (PlayercreateinfoItem) {}
rpc deletePlayercreateinfoItem (PlayercreateinfoItemWhereUniqueInput) returns (PlayercreateinfoItem) {} 
 }
message PlayercreateinfoItemCreateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message PlayercreateinfoItem {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message PlayercreateinfoItemWhereUniqueInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message PlayercreateinfoItemUpdateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message findManyParams {

};